--- a/css/common.css
+++ b/css/common.css
@@ -31,3 +31,24 @@ button {
  
   
 }
+
+.animation{
+  animation-name: scaleAnimation;
+  transition: all 200ms ease-in-out;
+  animation-duration: 100ms;
+  animation-timing-function:ease-out;
+}
+.animation:hover{
+  transform: scale(1.2);
+}  
+
+@keyframes scaleAnimation {
+  0%{
+    transform: scale(0);
+  }
+  50%{
+    transform: scale(0.5);
+  }
+  100% {transform: scale(1);
+  }
+}
